defaults upsell buttons align fix;

--- a/assets/css/admin/modula-cpt.css
+++ b/assets/css/admin/modula-cpt.css
@@ -1411,7 +1411,7 @@ Ups-sells carousel
     display:none;
 }
 
-#modula-defaults-upsell p {
+#modula-defaults-upsell p:not(:last-child) {
 	text-align:left;
 }
 
